--- a/EmployeeTracker/EmployeeTracker.csproj
+++ b/EmployeeTracker/EmployeeTracker.csproj
@@ -60,29 +60,29 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserControl1.cs">
+    <Compile Include="tabOVERVIEW.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControl1.Designer.cs">
-      <DependentUpon>UserControl1.cs</DependentUpon>
+    <Compile Include="tabOVERVIEW.Designer.cs">
+      <DependentUpon>tabOVERVIEW.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserControl2.cs">
+    <Compile Include="tabTODAY.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControl2.Designer.cs">
-      <DependentUpon>UserControl2.cs</DependentUpon>
+    <Compile Include="tabTODAY.Designer.cs">
+      <DependentUpon>tabTODAY.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserControl3.cs">
+    <Compile Include="tabCALENDAR.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControl3.Designer.cs">
-      <DependentUpon>UserControl3.cs</DependentUpon>
+    <Compile Include="tabCALENDAR.Designer.cs">
+      <DependentUpon>tabCALENDAR.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserControl4.cs">
+    <Compile Include="tabTEAM.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControl4.Designer.cs">
-      <DependentUpon>UserControl4.cs</DependentUpon>
+    <Compile Include="tabTEAM.Designer.cs">
+      <DependentUpon>tabTEAM.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -96,14 +96,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="UserControl1.resx">
-      <DependentUpon>UserControl1.cs</DependentUpon>
+    <EmbeddedResource Include="tabOVERVIEW.resx">
+      <DependentUpon>tabOVERVIEW.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserControl2.resx">
-      <DependentUpon>UserControl2.cs</DependentUpon>
+    <EmbeddedResource Include="tabTEAM.resx">
+      <DependentUpon>tabTEAM.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserControl3.resx">
-      <DependentUpon>UserControl3.cs</DependentUpon>
+    <EmbeddedResource Include="tabTODAY.resx">
+      <DependentUpon>tabTODAY.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="tabCALENDAR.resx">
+      <DependentUpon>tabCALENDAR.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="dbtkDataSet.xsc">
       <DependentUpon>dbtkDataSet.xsd</DependentUpon>
