--- a/EmployeeTracker/EmployeeTracker.csproj
+++ b/EmployeeTracker/EmployeeTracker.csproj
@@ -47,11 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddPopup.cs">
+    <Compile Include="EditPop.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddPopup.Designer.cs">
-      <DependentUpon>AddPopup.cs</DependentUpon>
+    <Compile Include="EditPop.Designer.cs">
+      <DependentUpon>EditPop.cs</DependentUpon>
     </Compile>
     <Compile Include="dbtkDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -95,8 +95,8 @@
     <Compile Include="tabTEAM.Designer.cs">
       <DependentUpon>tabTEAM.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddPopup.resx">
-      <DependentUpon>AddPopup.cs</DependentUpon>
+    <EmbeddedResource Include="EditPop.resx">
+      <DependentUpon>EditPop.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DASHBOARD.resx">
       <DependentUpon>DASHBOARD.cs</DependentUpon>
