--- a/EmployeeTracker/EmployeeTracker.csproj
+++ b/EmployeeTracker/EmployeeTracker.csproj
@@ -75,6 +75,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>dbtkDataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="EmployeeListCTO.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EmployeeListCTO.Designer.cs">
+      <DependentUpon>EmployeeListCTO.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tabOVERVIEW.cs">
