--- a/EmployeeTracker/App.config
+++ b/EmployeeTracker/App.config
@@ -3,8 +3,8 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="EmployeeTracker.Properties.Settings.dbtkConnectionString"
-            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\dbtk.accdb"
+        <add name="ConnectionName"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\dkeh\source\repos\EmployeeTracker\dbtk.accdb"
             providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
