--- a/EmployeeTracker/App.config
+++ b/EmployeeTracker/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="ConnectionName"
-            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\dkeh\source\repos\EmployeeTracker\dbtk.accdb"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\tdizon\source\repos\EmployeeTracker\dbtk.accdb"
             providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
