--- a/EmployeeTracker/EmployeeTracker.csproj
+++ b/EmployeeTracker/EmployeeTracker.csproj
@@ -122,11 +122,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddTask.cs">
+    <Compile Include="EmployeeListCTO.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddTask.Designer.cs">
-      <DependentUpon>AddTask.cs</DependentUpon>
+    <Compile Include="EmployeeListCTO.Designer.cs">
+      <DependentUpon>EmployeeListCTO.cs</DependentUpon>
     </Compile>
     <Compile Include="EditPop.cs">
       <SubType>Form</SubType>
@@ -182,8 +182,8 @@
     <Compile Include="useCTO.Designer.cs">
       <DependentUpon>useCTO.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddTask.resx">
-      <DependentUpon>AddTask.cs</DependentUpon>
+    <EmbeddedResource Include="EmployeeListCTO.resx">
+      <DependentUpon>EmployeeListCTO.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EditPop.resx">
       <DependentUpon>EditPop.cs</DependentUpon>
