--- a/EmployeeTracker/EmployeeTracker.csproj
+++ b/EmployeeTracker/EmployeeTracker.csproj
@@ -34,7 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-
     <Reference Include="ClosedXML, Version=0.102.2.0, Culture=neutral, PublicKeyToken=fd1eb21b62ae805b, processorArchitecture=MSIL">
       <HintPath>..\packages\ClosedXML.0.102.2\lib\netstandard2.0\ClosedXML.dll</HintPath>
     </Reference>
@@ -47,24 +46,19 @@
     <Reference Include="Irony, Version=1.0.11.0, Culture=neutral, PublicKeyToken=ca48ace7223ead47, processorArchitecture=MSIL">
       <HintPath>..\packages\Irony.NetCore.1.0.11\lib\net461\Irony.dll</HintPath>
     </Reference>
-	  <Reference Include="SixLabors.Fonts, Version=1.0.0.0, Culture=neutral, PublicKeyToken=d998eea7b14cab13, processorArchitecture=MSIL">
-		  <HintPath>..\packages\SixLabors.Fonts.1.0.0\lib\netstandard2.0\SixLabors.Fonts.dll</HintPath>
-	  </Reference>
+    <Reference Include="SixLabors.Fonts, Version=1.0.0.0, Culture=neutral, PublicKeyToken=d998eea7b14cab13, processorArchitecture=MSIL">
+      <HintPath>..\packages\SixLabors.Fonts.1.0.0\lib\netstandard2.0\SixLabors.Fonts.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
-
     </Reference>
     <Reference Include="System" />
-
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.Composition" />
-
     <Reference Include="System.Configuration" />
-
     <Reference Include="System.Core" />
-
     <Reference Include="System.IO, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IO.4.3.0\lib\net462\System.IO.dll</HintPath>
       <Private>True</Private>
@@ -118,12 +112,10 @@
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
-
     <Reference Include="System.Data.OleDb, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.OleDb.8.0.0\lib\net462\System.Data.OleDb.dll</HintPath>
     </Reference>
     <Reference Include="System.Web" />
-
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -138,6 +130,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddTask.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddTask.Designer.cs">
+      <DependentUpon>AddTask.cs</DependentUpon>
+    </Compile>
     <Compile Include="EmployeeListCTO.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -193,16 +191,15 @@
     <Compile Include="tabTEAM.Designer.cs">
       <DependentUpon>tabTEAM.cs</DependentUpon>
     </Compile>
-
     <Compile Include="useCTO.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="useCTO.Designer.cs">
       <DependentUpon>useCTO.cs</DependentUpon>
     </Compile>
-	  <EmbeddedResource Include="EmployeeListCTO.resx">
-		  <DependentUpon>EmployeeListCTO.cs</DependentUpon>
-	  </EmbeddedResource>
+    <EmbeddedResource Include="EmployeeListCTO.resx">
+      <DependentUpon>EmployeeListCTO.cs</DependentUpon>
+    </EmbeddedResource>
     <Compile Include="CdDay.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -211,7 +208,6 @@
     </Compile>
     <EmbeddedResource Include="AddTask.resx">
       <DependentUpon>AddTask.cs</DependentUpon>
-
     </EmbeddedResource>
     <EmbeddedResource Include="EditPop.resx">
       <DependentUpon>EditPop.cs</DependentUpon>
@@ -241,13 +237,11 @@
     <EmbeddedResource Include="tabCALENDAR.resx">
       <DependentUpon>tabCALENDAR.cs</DependentUpon>
     </EmbeddedResource>
-
-	  <EmbeddedResource Include="useCTO.resx">
-		  <DependentUpon>useCTO.cs</DependentUpon>
-	  </EmbeddedResource>
+    <EmbeddedResource Include="useCTO.resx">
+      <DependentUpon>useCTO.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CdDay.resx">
       <DependentUpon>CdDay.cs</DependentUpon>
-
     </EmbeddedResource>
     <None Include="dbtkDataSet.xsc">
       <DependentUpon>dbtkDataSet.xsd</DependentUpon>
